syntax = "proto3";

option java_package = "app.pb";
option java_multiple_files = true;

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
  int32 port = 2;
}